package br.unitins.greentech.dto;

public record VideoDTO (
    String nome,
    String urlVideo,
    String descricao
) {
    
}
