export class Dica {
    id!: number;
    nome!: string;
    descricao!: string;
}