export class Praga {
    id!: number;
    nome!: string;
    descricao!: string;
}