export class Prevencao {

  id!: number;
}
