export class TipoSolo {

  id!: number;
}
